# apis-library

./: .gitignore  .pre-commit-config.yaml  .pypirc  404.html  CHANGELOG.md  CLAUDE.md  MAINTAINERS.md  MANIFEST.in  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pip.conf  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml  release-manual.yml  release-pr.yml
.woodpecker/: build.yaml  check.yaml
changelog/: index.html
contributing/: index.html
contributing/development/: index.html
docs/: index.md
docs/contributing/: development.md  index.md
docs/explanation/: architecture.md  authentication.md  dynamic-config-validation.md  index.md  job-manager.md  logging.md  openapi-swagger-injection.md
docs/how-to/: add-a-connector.md  call-services-with-sso.md  constrain-field-by-config.md  enable-remote-config-api.md  extend-the-template.md  generate-auth-material.md  index.md  read-write-bitbucket.md  run-a-job.md  secure-with-oidc-jwks.md  use-awx-argocd-vault.md  verify-a-token.md
docs/reference/: cli.md  configuration.md  index.md  job-manager.md
docs/reference/api/: auth.md  config-api.md  connectors.md  errors.md  fastapi-app.md  schemas.md  security.md
docs/tutorials/: first-app.md  index.md  secure-your-api.md
explanation/: index.html
explanation/architecture/: index.html
explanation/authentication/: index.html
explanation/dynamic-config-validation/: index.html
explanation/logging/: index.html
explanation/openapi-swagger-injection/: index.html
how-to/: index.html
how-to/add-a-connector/: index.html
how-to/call-services-with-sso/: index.html
how-to/constrain-field-by-config/: index.html
how-to/enable-remote-config-api/: index.html
how-to/extend-the-template/: index.html
how-to/generate-auth-material/: index.html
how-to/read-write-bitbucket/: index.html
how-to/secure-with-oidc-jwks/: index.html
how-to/use-awx-argocd-vault/: index.html
how-to/verify-a-token/: index.html
reference/: index.html
reference/api/auth/: index.html
reference/api/config-api/: index.html
reference/api/connectors/: index.html
reference/api/errors/: index.html
reference/api/fastapi-app/: index.html
reference/api/schemas/: index.html
reference/api/security/: index.html
reference/cli/: index.html
reference/configuration/: index.html
search/: search_index.json
src/: pytest.ini
src/tashtiot_apis_library/: __init__.py  schemas.py  terraform_runner.py
src/tashtiot_apis_library/connectors/: __init__.py  errors.py  response_schemas.py
src/tashtiot_apis_library/connectors/argocd/: __init__.py  client.py  models.py  service.py
src/tashtiot_apis_library/connectors/awx/: __init__.py  client.py  models.py  service.py
src/tashtiot_apis_library/connectors/git/: __init__.py  client.py  models.py  service.py
src/tashtiot_apis_library/connectors/vault/: __init__.py  client.py  models.py  service.py
src/tashtiot_apis_library/fastapi_template/: __init__.py  auth.py  errors.py  security.py  utils.py
src/tashtiot_apis_library/fastapi_template/_internal/: __init__.py  openapi.py
src/tashtiot_apis_library/fastapi_template/_internal/database/: __init__.py  basic_api.py
src/tashtiot_apis_library/fastapi_template/_internal/metrics/: __init__.py  uptime.py
src/tashtiot_apis_library/fastapi_template/_internal/middlewares/: __init__.py  exception.py  log_request.py  time_request.py
src/tashtiot_apis_library/fastapi_template/_internal/models/: handler.py
src/tashtiot_apis_library/fastapi_template/_internal/routes/: __init__.py  metrics.py
src/tashtiot_apis_library/fastapi_template/_internal/security/: __init__.py  dependency.py  errors.py  keygen.py  middleware.py  models.py  oidc.py  sso.py  verifier.py
src/tashtiot_apis_library/fastapi_template/_internal/utils/: __init__.py  config.py  logger.py
src/tashtiot_apis_library/fastapi_template/config_api/: __init__.py  conf.py  errors.py  models.py  openapi.py  provider.py  schemas.py  wiring.py
src/tashtiot_apis_library/fastapi_template/tests/: test_auth.py  test_sso.py
src/tashtiot_apis_library/fastapi_template/tests/config_api/: conftest.py  test_config_api_openapi.py  test_config_api_provider.py  test_config_api_schemas.py  test_config_api_wiring.py  upstream.py
src/tashtiot_apis_library/job_manager/: README.md  __init__.py  broker.py  exceptions.py  executor.py  locks.py  metrics.py  models.py  repository.py  router.py  service.py  tasks.py  wiring.py
src/tests/: test_awx_client.py  test_platform_logger.py  test_schemas.py  test_status_code_mapping.py  test_validation.py
tests/: test_lazy_imports.py
tests/connectors/: test_argocd_client.py  test_argocd_service.py  test_awx_client.py  test_git_client.py  test_schemas.py
tests/fastapi_template/: test_auth.py  test_root.py  test_sso.py
tests/fastapi_template/config_api/: conftest.py  test_config_api_models.py  test_config_api_openapi.py  test_config_api_provider.py  test_config_api_schemas.py  test_config_api_wiring.py  upstream.py
tests/fastapi_template/database/: basic_api_test.py
tests/job_manager/: conftest.py  test_executor.py  test_repository.py  test_router.py  test_service.py  test_tasks.py
tutorials/: index.html
tutorials/first-app/: index.html
tutorials/secure-your-api/: index.html
