[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tashtiot-apis-library"
description = "Unified package for infrastructure connectors (ArgoCD, Git, Vault) and FastAPI template utilities"
readme = "README.md"
authors = [
    { name = "Yehonatan Magen" },
    { name = "Alon Elimelech" },
    { name = "Chaim Mendelson" },
    { name = "Daniel Tsytrinbaum" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
# version is provided by setuptools-scm from git tags
dynamic = ["version"]
dependencies = [
    "fastapi>=0.95",
    "httpx>=0.24",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0.3",
    "prometheus-client",
    "uvicorn",
    "pyjwt[crypto]>=2.9.0",
    "starlette",
    "aiocache",
    "cryptography",
    "python-dotenv",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]

[tool.setuptools_scm]

# Console entry points
[project.scripts]
gen-auth-material = "tashtiot_apis_library.fastapi_template._internal.security.keygen:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tashtiot_apis_library", "tashtiot_apis_library.*"]

[tool.setuptools.package-data]
tashtiot_apis_library = ["fastapi_template/static/**"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = "-ra -q --disable-warnings --strict-markers --cov=tashtiot_apis_library --cov-report=term-missing"

markers = [
    "asyncio: mark test to be run by the asyncio event loop",
    "rest: mark test as needing a REST server",
    "ftp: mark test as needing an ftp server",
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
